--- a/Practice/index.html
+++ b/Practice/index.html
@@ -17,9 +17,21 @@
     <button id="submitBtn">Submit</button>
     
     <p id="p1"></p><br>
-    <p id="p2"></p>
+    <p id="p2"></p><br>
+
+    <p id="p3Hide"> Would you like to turn the car on?</p>
+
+    <input type="text" id="userInput2" placeholder="yes or no"><br><br>
+    <button id="submitBtn2">Submit</button>
+
+    <style>
+        #userInput2 { display: none; }
+        #submitBtn2 { display: none; } 
+        #p3Hide { display: none; } 
+    </style> <!-- stlying the second user input to hide it-->
 
     
+
     <script src = "javascript.js"></script>
 </body>
 
